[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0.298039, 0.396078, 0.662745, 1 )

[node name="Start" type="Button" parent="."]
margin_left = 189.0
margin_top = 88.0
margin_right = 283.0
margin_bottom = 108.0
text = "NEW GAME"

[node name="Load" type="Button" parent="."]
margin_left = 190.0
margin_top = 121.0
margin_right = 283.0
margin_bottom = 141.0
text = "LOAD GAME"

[node name="Level" type="Button" parent="."]
margin_left = 189.0
margin_top = 155.0
margin_right = 284.0
margin_bottom = 175.0
text = "LEVELS"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Level" to="." method="_on_Level_pressed"]
